add on-click behavior, update styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Hello, World! Hola, Mundo!</h1>
+    <h1 onclick="showMessage()">Hello, World! Hola, Mundo!</h1>
+    <script src="scripts.js"></script>
 </body>
 </html>
