--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1 onclick="showMessage()">Hello, World! Hola, Mundo!</h1>
+    <h1 onclick="showMessage()">Hello, World! Hola, Mundo! Hallo, Welt!</h1>
     <script src="scripts.js"></script>
 </body>
 </html>
