added new heading and new css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1 onclick="showMessage()">Hello, World! Hola, Mundo! Hallo, Welt!</h1>
+    <h2>Instructions. Instrucciones. Anweisungen.</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sociis suscipit, nam praesent velit imperdiet et facilisi arcu massa natoque orci</p>
+    
     <script src="scripts.js"></script>
 </body>
 </html>
