--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 onclick="showMessage()">Hello, World! Hola, Mundo! Hallo, Welt!</h1>
-    <h2> Welcome! Bienvenido! Wilkommen!</h2>
+    <h2 onclick="showMessage()"> Welcome! Bienvenido! Wilkommen!</h2>
     <h2>Instructions. Instrucciones. Anweisungen.</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sociis suscipit, nam praesent velit imperdiet et facilisi arcu massa natoque orci</p>
     
