--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 onclick="showMessage()">Hello, World! Hola, Mundo! Hallo, Welt!</h1>
+    <img src="./smiley.png" alt="Smiley face" height="420" width="420">
     <script src="scripts.js"></script>
 </body>
 </html>
